# magiaforge

./: .gitignore  CNAME  Cargo.toml  LICENSE.md  Trunk.toml  analytics-de066eae438ec185.js  build.rs  index-56627a79e0752a1c.css  index.html  magiaboost-icon.rc  magiaboost.exe.manifest  magiacircle-12fca8cce23eadb6.js  magiacircle-243052149e102115.js  magiacircle-28ae6ffa0292b722.js  magiacircle-425e61dccaea0cf9.js  magiacircle-467ac64dd96bcc8e.js  magiacircle-573e987629cc00a9.js  magiacircle-58fc8f8eac5f01f9.js  magiacircle-7683d84f1643d2fe.js  magiacircle-b2bbf30a01d38419.js  magiacircle-c7e77533e3329410.js  magiacircle-d6d663f333aad880.js  magiacircle-ddf3275f18778b11.js  magiacircle-e58e6807b0440759.js  magiacircle-fb430f1981919d1.js  magiaforge-1424aa34e39db777.js  magiaforge-14914901e15b033.js  magiaforge-1492bcbf7ca9d807.js  magiaforge-149b5dcd552a6fd4.js  magiaforge-15861a8d8d4c5335.js  magiaforge-15be935ebb57bba3.js  magiaforge-15fe1398576e4a95.js  magiaforge-162e2d96f8ba7b01.js  magiaforge-16b65dec00c1e5ae.js  magiaforge-17ee6a89eae86bf8.js  magiaforge-192e3f4c3c0abbf2.js  magiaforge-1bcba5d481d3d389.js  magiaforge-1cecffd2e26ad10.js  magiaforge-1d558a5c2924cb06.js  magiaforge-1ec933d06db57015.js  (+220 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
assets/: CNAME  analytics.js  asset.aseprite  config.actors.ron  config.senario.ron  config.spells.ron  constants.config.ron  dynamic.assets.ron  level.aseprite  level.ldtk  registry.actor.ron  registry.game.ron  registry.senario.ron  registry.spell.ron  registry.tile.ron  restart-audio-context.js  script.js  tile.aseprite  title.aseprite  world.ldtk
assets/Pixel Art Top Down Basic/: basic.ldtk
assets/actor/: bomb.aseprite  bookshelf.aseprite  chicken.aseprite  rock.aseprite  stone_lantern.aseprite  witch.aseprite
assets/chest/: barrel.aseprite  barrel_bomb.aseprite  chest.aseprite  crate.aseprite  jar_blue.aseprite
assets/enemy/: buer.aseprite  eyeball.aseprite  eyeball_friend.aseprite  friend_slime.aseprite  huge_slime_shadow.aseprite  salamander.aseprite  shadow.aseprite  spider.aseprite
assets/entity/: bomb.aseprite  chicken.aseprite  chiken.aseprite  explosive_mashroom.aseprite  eyeball.aseprite  fire.aseprite  fireball.aseprite  freeze.aseprite  gold.aseprite  huge_slime.aseprite  impact.aseprite  jar_green.aseprite  jar_red.aseprite  magic_circle.aseprite  player.aseprite  rabbit.aseprite  rabbit_black.aseprite  rabbit_blue.aseprite  rabbit_green.aseprite  raven.aseprite  salamander.aseprite  sandbug.aseprite  shadow.aseprite  slash.aseprite  slime.aseprite  spider.aseprite  stone_lantern.aseprite  web.aseprite  witch.aseprite
assets/image/: asset.aseprite  atlas.aseprite  ending.aseprite  level.aseprite  next_page.aseprite  opening.aseprite  title.aseprite  title_cloud.aseprite  title_cloud2.aseprite  title_witch.aseprite
assets/rabbit/: rabbit_black.aseprite  rabbit_blue.aseprite  rabbit_red.aseprite  rabbit_white.aseprite
docs/: index-21cc2d81480eab49.css  index-d67fcd6731c2e45b.css  index.html  magiaboost-1277ff2f2f599254.js  magiaboost-1cd81403cf02b908.js  magiaboost-270b497ff3b743f1.js  magiaboost-2fb79cffd8fe7f98.js  magiaboost-31a8cd7358e1db5b.js  magiaboost-327821f3ab396a84.js  magiaboost-33ca7e8945ee19e6.js  magiaboost-3b439243c1b94947.js  magiaboost-3b857f45c3b266fd.js  magiaboost-42eab524b83daa06.js  magiaboost-4815df2dcaf1d271.js  magiaboost-5541238713fcb20e.js  magiaboost-58aa3a83dd63e223.js  magiaboost-5a8ac1a5b9cb7730.js  magiaboost-5bdd60a7011b2e87.js  magiaboost-5eb067ac2e844ee5.js  magiaboost-64a9fad6bf059e09.js  magiaboost-7ecba05670498553.js  magiaboost-8c151f0b3c1acd05.js  magiaboost-8ebbc8b821d603bf.js  magiaboost-90299062e34c442b.js  magiaboost-93e4cf97450faebc.js  magiaboost-94182f8037e50fae.js  magiaboost-9c3583b9a9bd653e.js  magiaboost-a2ec827e354106ae.js  magiaboost-a67ca9155787b967.js  magiaboost-a94e97dbfe7ac601.js  magiaboost-ad76a8de2463434d.js  magiaboost-b2d585d19b49047f.js  magiaboost-b6be9d9500b606fd.js  magiaboost-b8f58383ee58890.js  magiaboost-be03c49cd2ec9e1a.js  magiaboost-c08358c1fb525763.js  magiaboost-c260cc22fd9f73e4.js  magiaboost-c4d95098534cf7aa.js  magiaboost-c502638018c8ab5f.js  magiaboost-d3e8ead19f0c53fb.js  (+74 more)
docs/assets/: asset.aseprite  icon.aseprite  level.aseprite  restart-audio-context.js  tile.aseprite  title.aseprite
docs/light/: index.html  my_bevy_game-6b6fc4429c21961a.js
misc/: battle.aseprite  mashroom.aseprite  opening.aseprite  opening_sketch.aseprite  rabbit.aseprite  water_tileset.aseprite  witch.aseprite
server/: index.js  package-lock.json  package.json  readme.md
server/public/: index.html  main.js
src/: actor.rs  aseprite_raw_loader.rs  asset.rs  asset_credit.rs  audio.rs  bgm.rs  book_shelf.rs  bullet_type.rs  camera.rs  cast.rs  collision.rs  command.rs  component.rs  config.rs  console.rs  constant.rs  controller.rs  curve.rs  debug.rs  debug_command.rs  enemy.rs  entity.rs  equipment.rs  finder.rs  firing.rs  footsteps.rs  game.rs  gamepad.rs  hud.rs  input.rs  interaction_sensor.rs  interpreter.rs  inventory.rs  inventory_item.rs  language.rs  ldtk.rs  ldtk_util.rs  level.rs  main.rs  message.rs  (+24 more)
src/actor/: basic.rs  bomb.rs  book_shelf.rs  chest.rs  chicken.rs  enemy.rs  player.rs  rabbit.rs  remote.rs  rock.rs  sandbug.rs  stone_lantern.rs  witch.rs
src/component/: animated_slice.rs  counter.rs  entity_depth.rs  falling.rs  flip.rs  life.rs  metamorphosis.rs  mine.rs  point_light.rs  vertical.rs
src/controller/: despawn_with_gold.rs  enemy.rs  message_rabbit.rs  player.rs  remote.rs  servant.rs  shop_rabbit.rs  training_dummy.rs
src/enemy/: basic.rs  buer.rs  chicken.rs  chiken.rs  eyeball.rs  huge_slime.rs  salamander.rs  sandbug.rs  shadow.rs  slime.rs  spider.rs
src/entity/: actor.rs  bgm.rs  blood.rs  bomb.rs  book_shelf.rs  breakable.rs  broken_magic_circle.rs  bullet.rs  bullet_particle.rs  chest.rs  counter.rs  damege.rs  dropped_item.rs  explosion.rs  falling.rs  fire.rs  firebaall.rs  fireball.rs  gold.rs  grass.rs  impact.rs  life.rs  light.rs  magic_circle.rs  (+14 more)
(+145 files in other folders)
