[package]
name = "magiaboost"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
bevy-inspector-egui = "0.27.0"
bevy_aseprite_ultra = "0.2.4"
bevy_asset_loader = "0.21.0"
bevy_async_task = "0.2.0"
bevy_light_2d = "0.4.2"
bevy_particle_systems = "0.13.0"
ewebsock = "0.7.0"
git-version = "0.3.9"
iyes_perf_ui = "0.3.0"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
wasm-bindgen = "0.2.78"
bevy_websocket_sync = { path = "../bevy_websocket_sync" }
uuid = "1.11.0"
bincode = "1.3.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

[dependencies.bevy]
version = "0.14.2"
# Disable the default features if there are any that you do not want
default-features = false
# https://docs.rs/crate/bevy/latest/features
features = [
    # "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    # "bevy_gizmos",
    # "bevy_gltf",
    # "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    # "hdr",
    # "multi_threaded",
    "png",
    # "smaa_luts",
    "sysinfo_plugin",
    # "tonemapping_luts",
    "vorbis",
    # "webgl2",

    # bevy_light_2dはデスクトップではwebgl2でも動きますが、wasmではwebgpuでないと実行時エラーで動きません
    # https://bevyengine.org/news/bevy-webgpu/
    # https://github.com/bevyengine/bevy/tree/main/examples#webgl2-and-webgpu
    # https://github.com/jgayfer/bevy_light_2d/pull/7
    "webgpu",

    # "x11",
]

[dependencies.web-sys]
version = "0.3.70"
features = ["console", "Window", "Storage"]

[dependencies.bevy_rapier2d]
version = "0.27.0"
features = ["debug-render-2d"]

[profile.dev.package.bevy_rapier2d]
# https://rapier.rs/docs/user_guides/bevy_plugin/common_mistakes#my-local-build-of-rapier-is-slower-than-the-online-demos
opt-level = 3

[dev-dependencies]
trunk = "*"

[profile.release]
codegen-units = 1
# wasmターゲットの場合は以下のオプションでサイズに対して最適化したい
opt-level = "z"
# https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
# lto = "thin"
lto = true

[features]
debug = []
default = []

[build-dependencies]
embed-resource = "2.5"
