[package]
name = "magiaforge"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
debug = []
save = []
default = []

[dependencies]
bevy_asset_loader = "0.21.0"
bevy_kira_audio = { version = "0.20.0", features = ["ogg"] }
bevy_light_2d = "0.4.2"
bevy_particle_systems = "0.13.0"
bevy_simple_websocket = { git = "https://github.com/aratama/bevy_simple_websocket" }
bincode = "1.3.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
git-version = "0.3.9"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
uuid = "1.11.0"
bevy_pkv = "0.11.1"
bevy_embedded_assets = "0.11.0"
# 以下の二つはデバッグ用
bevy-inspector-egui = "0.27.0"
iyes_perf_ui = "0.3.0"
bevy_simple_text_input = "0.9.2"
bevy_aseprite_ultra = "0.2.4"


[dependencies.bevy]
version = "0.14.2"
# Disable the default features if there are any that you do not want
default-features = false
# https://docs.rs/crate/bevy/latest/features
features = [
    # "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    # "bevy_gizmos",
    # "bevy_gltf",
    # "bevy_pbr",
    "bevy_render",
    # "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    # "hdr",
    "multi_threaded",
    "png",
    # "smaa_luts",
    "sysinfo_plugin",
    # "tonemapping_luts",
    # "vorbis", bevy_kira_audioでoggを使うので不要
    # "webgl2",

    # bevy_light_2dはデスクトップではwebgl2でも動きますが、wasmではwebgpuでないと実行時エラーで動きません
    # https://bevyengine.org/news/bevy-webgpu/
    # https://github.com/bevyengine/bevy/tree/main/examples#webgl2-and-webgpu
    # https://github.com/jgayfer/bevy_light_2d/pull/7
    "webgpu",

    # "x11",
]

[dependencies.web-sys]
version = "0.3.70"
features = ["console", "Window", "Storage"]

[dependencies.bevy_rapier2d]
version = "0.27.0"
features = ["debug-render-2d"]

[dev-dependencies]
trunk = "*"

[build-dependencies]
embed-resource = "2.5"
